--- a/pages/features.html
+++ b/pages/features.html
@@ -14,7 +14,7 @@
 <body>
     <div class="Parent">
         <nav>
-            <a href="../Index.html"><img src="../images/logo.png" id="Logo"></a>
+            <a href="../index.html"><img src="../images/logo.png" id="Logo"></a>
             <ul>
                 <li><a href="../pages/features.html">Features</a></li>
                 <li><a href="../pages/HIW.html">How it works</a></li>
